Changing algorithm for ignoring annotations.